--- a/src/products/templates/products/main.html
+++ b/src/products/templates/products/main.html
@@ -2,13 +2,49 @@
 
 {% block title %}performance{% endblock title %}
 
-{% block content %}<h1>Hello World</h1>
-{{ products | safe}}
-<hr>
-{{ purchase | safe}}
+{% block content %}
+
+{{ df | safe }}
 
 <hr>
-{{ df | safe}}
+
+<div>
+
+    <form action="" method="POST" class="ui form">
+    {% csrf_token %}
+        <div class="field">
+            <label>Choose a Chart Type: </label>
+            <div class="ui selection dropdown">
+                <input type="hidden" name="sales">
+                <i class="dropdown icon"></i>
+                <div class="default text">-----</div>
+                <div class="menu">
+                    <div class="item" value="bar">Bar plot</div>
+                    <div class="item" value="line">Line plot</div>
+                    <div class="item" value="count">Count plot</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="field">
+            <div class="two fields">
+                <div class="field">
+                    <label> Date from: </label>
+                    <input type="date" name="date_from">
+                </div>
+                <div class="field">
+                    <label> Date to: </label>
+                    <input type="date" name="date_to">
+                </div>
+            </div>
+        </div>
+        <button class='ui primary button' type='submit'>Select</button>
+
+    </form>
+
+    
+
+</div>
 
 {% endblock content %}
 
