--- a/src/products/templates/products/main.html
+++ b/src/products/templates/products/main.html
@@ -4,11 +4,13 @@
 
 {% block content %}
 
-{{ df | safe }}
-
 <hr>
 
 <div>
+
+    {% if error_message%}
+        {{ error_message }}
+    {% endif %}
 
     <form action="" method="POST" class="ui form">
     {% csrf_token %}
