--- a/src/products/templates/products/main.html
+++ b/src/products/templates/products/main.html
@@ -4,13 +4,22 @@
 
 {% block content %}
 
-<hr>
 
 <div>
 
     {% if error_message%}
         {{ error_message }}
     {% endif %}
+
+    {% if request.POST %}
+        {% if graph %}
+            <img src="data:image/png;base64, {{ graph | safe}}">
+
+        {% endif %}
+
+
+    {% endif %}
+
 
     <form action="" method="POST" class="ui form">
     {% csrf_token %}
